Add TabController & ImagePicker

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,11 +43,12 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
-
+// localProperties.getProperty(‘flutter.minSdkVersion’).toInteger()
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.nerdcollector.nerdcollector"
-        minSdkVersion flutter.minSdkVersion
+        // minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
