--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   image_picker: ^0.8.6
   path_provider: ^2.0.11
   path: ^1.8.2
+  flutter_sound: ^9.1.9
+  permission_handler: ^9.2.0
 
 dev_dependencies:
   flutter_test:
